first commit new branche

--- a/testGIT.html
+++ b/testGIT.html
@@ -8,12 +8,12 @@
 
 <body>
 
-  <p>Начало документа...</p>
+  <p>Начало ...</p>
   <script>
-    alert( 'Привет, Мир!' );
+    alert( 'Привет в мире автоматизации!' );
   </script>
 
-  <p>...Конец документа</p>
+  <p>...Конец</p>
 
 </body>
 
